tests/baselines/reference/ES5For-ofTypeCheck14(strict=true).errors.txt
ES5For-ofTypeCheck14.ts(2,17): error TS2454: Variable 'union' is used before being assigned.
ES5For-ofTypeCheck14.ts(2,17): error TS2802: Type 'Set<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== ES5For-ofTypeCheck14.ts (2 errors) ====
    var union: string | Set<number>
    for (const e of union) { }
                    ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.
                    ~~~~~
!!! error TS2802: Type 'Set<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.